# sic

./: .clang-format  .env_example  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  COPYRIGHT  LICENSE  README.md  build.sh  run.sh
cmake/: CompilerWarnings.cmake  Sanitizers.cmake  StandardProjectSettings.cmake
src/: CMakeLists.txt  characters.hpp  main.cpp  op_codes.hpp
